# FastApi_task

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  setup.cfg
app/: database.py  main.py  models.py
app/migration/: env.py
app/migration/versions/: 41f77559610a_initial.py  f42bbdfab22c_fix_table.py
app/tests/: conftest.py
app/user/: schemas.py
app/wallet/: dependencies.py  endpoints.py  schemas.py
tests/: conftest.py  test_app.py
